force-app/main/default/objects/Tattoo_Removal_S__c/fields/Frosting_Present__c.field-meta.xml
<CustomField>
    <fullName>Frosting_Present__c</fullName>
    <label>Frosting Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>