force-app/main/default/objects/Tattoo_Removal_S__c/fields/Occlusive_Balm__c.field-meta.xml
<CustomField>
    <fullName>Occlusive_Balm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Occlusive Balm</label>
    <type>Checkbox</type>
</CustomField>