force-app/main/default/objects/Tattoo_Removal_S__c/fields/Tattoo_Removal__c.field-meta.xml
<CustomField>
    <fullName>Tattoo_Removal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tattoo Removal</label>
    <referenceTo>Tattoo_Removal__c</referenceTo>
    <relationshipLabel>Tattoo Removal(S)</relationshipLabel>
    <relationshipName>Tattoo_Removal_S</relationshipName>
    <type>Lookup</type>
</CustomField>